// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component should render correctly with alignSelf 1`] = `
<div
  className="sc-gsTEea ijaBEU"
/>
`;

exports[`Column component should render correctly with each direction padding props 1`] = `
<div
  className="sc-gsTEea dlsOFT"
/>
`;

exports[`Column component should render correctly with each side padding props 1`] = `
<div
  className="sc-gsTEea fSRNpu"
/>
`;

exports[`Column component should render correctly with global padding props 1`] = `
<div
  className="sc-gsTEea fIZnUn"
/>
`;

exports[`Column component should render correctly with max width 1`] = `
<div
  className="sc-gsTEea kgpuMQ"
/>
`;

exports[`Column component should render correctly with order props 1`] = `
<div
  className="sc-gsTEea fPQIMm"
/>
`;

exports[`Column component should render correctly with some props 1`] = `
<div
  className="sc-gsTEea hUMLrc"
/>
`;

exports[`Column component should render correctly with textAlign 1`] = `
<div
  className="sc-gsTEea fxbjPn"
/>
`;

exports[`Column component should render correctly without props 1`] = `
<div
  className="sc-gsTEea hUMLrc"
/>
`;
